--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tieuluanchuyennganh",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,9 +8,11 @@
     "object.omit": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-image-lightbox": "^5.1.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
+    "reactjs-popup": "^1.5.0",
     "redux": "^4.0.4"
   },
   "scripts": {
