--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
-    "mdbreact": "^4.25.1",
+    "mdbreact": "^4.25.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.1"
@@ -36,7 +36,9 @@
   },
   "devDependencies": {
     "ftp-deploy": "^2.3.6",
+    "lodash": "^4.17.15",
     "react-redux": "^7.1.3",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "unix-timestamp": "^0.2.0"
   }
 }
